# TimeWatchAutomator

./: .gitignore  README.md  pyproject.toml  timewatcher.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  version-bump.yml
tests/: test_timewatcher.py
