[tool.poetry]
name = "timewatcher"
version = "1.0.3"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.23.0"
setuptools = "^71.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
